[gd_scene load_steps=12 format=3 uid="uid://cc0r2305s84m6"]

[ext_resource type="Texture2D" uid="uid://dip8li3kirwx" path="res://icons/exitLeftsmol.png" id="1_1wj41"]
[ext_resource type="Script" path="res://sharp_code_editor_panel.gd" id="1_cng6p"]
[ext_resource type="Texture2D" uid="uid://bfi4m8hsmr7ws" path="res://icons/wrenchsmol.png" id="2_75t02"]
[ext_resource type="Script" path="res://csharp_code_edit.gd" id="3_bua8v"]
[ext_resource type="Texture2D" uid="uid://bpa8ti1gt4w8h" path="res://icons/next.png" id="3_ifixe"]
[ext_resource type="Script" path="res://sharp_errors_panel.gd" id="4_j1yq6"]
[ext_resource type="Texture2D" uid="uid://bib0pmfnnlxwy" path="res://icons/cross_smol.png" id="5_wib1i"]
[ext_resource type="Texture2D" uid="uid://cxsx2bp5uew0e" path="res://icons/arrowLeft.png" id="6_0v8n6"]
[ext_resource type="Texture2D" uid="uid://dxnhlp2y0jyc2" path="res://icons/arrowRight.png" id="7_thbti"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8q38b"]
bg_color = Color(0.0705882, 0.0784314, 0.0980392, 1)

[sub_resource type="CodeHighlighter" id="CodeHighlighter_ytxgp"]
number_color = Color(0.631373, 1, 0.878431, 1)
symbol_color = Color(0.670588, 0.788235, 1, 1)
function_color = Color(0.341176, 0.701961, 1, 1)
member_variable_color = Color(0.737255, 0.878431, 1, 1)

[node name="Panel" type="Panel"]
custom_minimum_size = Vector2(1000, 340)
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("SharpEditorPanelChild/PanelContainer/VBoxContainer/CodeEdit")
focus_neighbor_top = NodePath("SharpEditorPanelChild/PanelContainer/VBoxContainer/CodeEdit")
focus_neighbor_right = NodePath("SharpEditorPanelChild/PanelContainer/VBoxContainer/CodeEdit")
focus_neighbor_bottom = NodePath("SharpEditorPanelChild/PanelContainer/VBoxContainer/CodeEdit")
focus_next = NodePath("SharpEditorPanelChild/PanelContainer/VBoxContainer/CodeEdit")
focus_previous = NodePath("SharpEditorPanelChild/PanelContainer/VBoxContainer/CodeEdit")
theme_override_styles/panel = SubResource("StyleBoxFlat_8q38b")
script = ExtResource("1_cng6p")

[node name="SharpEditorPanelChild" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.33

[node name="MarginContainer" type="MarginContainer" parent="SharpEditorPanelChild"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="SharpEditorPanelChild/MarginContainer"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_override_constants/separation = 10

[node name="RunButtons" type="HBoxContainer" parent="SharpEditorPanelChild/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="SharpEditorPanelChild/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StopButton" type="Button" parent="SharpEditorPanelChild/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_mode = 0
text = "Stop"
icon = ExtResource("1_1wj41")
flat = true

[node name="RunButton" type="Button" parent="SharpEditorPanelChild/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 15
text = "Run"
icon = ExtResource("3_ifixe")
flat = true
expand_icon = true

[node name="CompileButton" type="Button" parent="SharpEditorPanelChild/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 15
text = "Compile"
icon = ExtResource("2_75t02")
flat = true

[node name="AnalyzeButton" type="Button" parent="SharpEditorPanelChild/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "Analyze"
flat = true

[node name="PanelContainer" type="PanelContainer" parent="SharpEditorPanelChild"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SharpEditorPanelChild/PanelContainer"]
layout_mode = 2

[node name="CodeEdit" type="CodeEdit" parent="SharpEditorPanelChild/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
theme_override_colors/current_line_color = Color(1, 1, 1, 0.0705882)
theme_override_colors/background_color = Color(0.0705882, 0.0784314, 0.0980392, 1)
theme_override_colors/font_color = Color(0.776471, 0.776471, 0.784314, 1)
theme_override_constants/caret_width = 4
theme_override_font_sizes/font_size = 20
theme_override_colors/line_number_color = Color(0.776471, 0.776471, 0.784314, 0.501961)
theme_override_colors/completion_background_color = Color(0.101961, 0.109804, 0.141176, 1)
theme_override_colors/brace_mismatch_color = Color(0.72549, 0, 0, 1)
wrap_mode = 1
scroll_smooth = true
minimap_draw = true
minimap_width = 50
caret_blink = true
caret_blink_interval = 0.5
syntax_highlighter = SubResource("CodeHighlighter_ytxgp")
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
draw_spaces = true
line_folding = true
line_length_guidelines = Array[int]([100, 80])
gutters_draw_breakpoints_gutter = true
gutters_draw_bookmarks = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
indent_size = 5
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("3_bua8v")

[node name="ErrorsPanel" type="HBoxContainer" parent="SharpEditorPanelChild/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("4_j1yq6")
metadata/_edit_layout_mode = 1

[node name="ErrorButton" type="Button" parent="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel"]
modulate = Color(1, 0.156863, 0.105882, 1)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(0.999972, 0.740588, 0.69836, 1)
theme_override_colors/font_color = Color(1, 0.229536, 0.174185, 1)
theme_override_constants/h_separation = 3
theme_override_font_sizes/font_size = 20
icon = ExtResource("5_wib1i")
flat = true
alignment = 0
autowrap_mode = 2

[node name="Spacer" type="Control" parent="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="PreviousButton" type="Button" parent="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel"]
modulate = Color(0.905882, 0.14902, 0.105882, 1)
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
icon = ExtResource("6_0v8n6")
flat = true
expand_icon = true

[node name="CountLabel" type="Label" parent="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.868269, 0.52416, 0.514872, 1)

[node name="NextButton" type="Button" parent="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel"]
modulate = Color(0.905882, 0.14902, 0.105882, 1)
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
icon = ExtResource("7_thbti")
flat = true
expand_icon = true

[connection signal="error_pressed" from="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel" to="SharpEditorPanelChild/PanelContainer/VBoxContainer/CodeEdit" method="_on_errors_panel_error_pressed"]
[connection signal="pressed" from="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel/ErrorButton" to="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel" method="_on_error_button_pressed"]
[connection signal="pressed" from="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel/PreviousButton" to="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel" method="_on_previous_button_pressed"]
[connection signal="pressed" from="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel/NextButton" to="SharpEditorPanelChild/PanelContainer/VBoxContainer/ErrorsPanel" method="_on_next_button_pressed"]
